[Chore #162570564] Swagger API documentation improved
